--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -10239,3 +10239,4 @@ form.edit_profile .height20 {
     height: 50px;
     float: left;
 }
+.addappointmenttrainerlist .panel-heading label{ float:right;}
