--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -8076,13 +8076,20 @@
     }
 }
 /***** New css changwes ******************/
- .form-group label {
+ .form-group label, label.control-label {
      font-size: 16px;
      color: #999 !important;
      font-weight: 300;
      margin: 0;
      padding: 0;
 }
+.trainer-class-form label.control-label{ font-size: 16px;
+    color: #999 !important;
+    font-weight: 300;
+    margin: 0;
+    padding: 0;
+}
+
  .form-group label i {
      color: #898989;
 }
@@ -8095,6 +8102,25 @@
      font-size: 14px;
      height: 35px;
 }
+.form-group select.form-control {
+    margin: 0 !important;
+    border: none !important;
+    border-bottom: 1px solid #eee !important;
+    box-shadow: none !important;
+    padding: 0 !important;
+    font-size: 14px;
+    height: 35px;
+    appearance: none;
+    -webkit-appearance: none;
+    position: relative;
+   background: url(../img/angle-down-solid.svg) center right 5px no-repeat !important;
+   background-size:12px !important; 
+}
+
+.trainer-class-form .img_users{ margin:15px 0;}
+.trainer-class-form .pro-bottom-btn{ margin:15px 0 0 0;}
+.trainer-class-form .pro-bottom-btn .btn { width: auto;}
+
  .form-group.has-error input.form-control {
      border-bottom: 1px solid #ff5653 !important;
      color: #ff5653 
@@ -8347,19 +8373,21 @@
      max-width: 50%;
      float: left;
 }
- .img_users .field-user-profile_photo {
+ .img_users .form-group {
      float: left;
      max-width: 200px;
      padding-right: 25px;
      position: relative;
+     width: 100%;
+     height: 150px;
 }
- .img_users img#preview {
+ .img_users img#preview, .img_users img.upload-preview{
      max-width: 150px;
      height: 150px;
      max-height: 150px;
      max-width: 150px;
 }
- .img_users .field-user-profile_photo input.form-control {
+ .img_users .form-group input.form-control {
      position: absolute;
      top: 0;
      left: 0;
@@ -8369,7 +8397,7 @@
      opacity: 0;
      cursor: pointer;
 }
- .img_users .field-user-profile_photo .fileupload {
+ .img_users .form-group .fileupload {
      position: absolute;
      top: 0;
      left: 0;
@@ -8382,7 +8410,7 @@
      font-size: 16px;
      line-height: 186px;
 }
- .img_users .field-user-profile_photo .fileupload:after {
+ .img_users .form-group .fileupload:after {
      width: auto;
      height: 50px;
      position: absolute;
@@ -8480,23 +8508,52 @@
      text-align: center;
 }
 .bootstrap-timepicker span.picker{ background: transparent; border: none;border-bottom: 1px solid #eee !important;}
-input.krajee-datepicker{margin:0 !important;}
+input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
+    border: none !important;
+        border-bottom-color: currentcolor;
+        border-bottom-style: none;
+        border-bottom-width: medium;
+    border-bottom: 1px solid #eee !important;
+    box-shadow: none !important;
+    padding: 0 !important;
+    font-size: 14px;
+    height: 35px;
+
+}
+.input-group{position: relative;margin-bottom: 25px;}
+.input-group .input-group-addon{background: transparent;
+    border: none !important;
+        border-bottom-color: currentcolor;
+        border-bottom-style: none;
+        border-bottom-width: medium;
+    border-bottom: 1px solid #eee !important;
+
+}
 .videosource video{ width: 100%; margin:25px 0 0 0;}
 
 .box-wrap .box-img{ width: 100%; height:130px; margin: 0 0 15px 0; width: 100%; display: inline-block;}
 .box-wrap .box-img .box-img-center{ height:100%; border-bottom:2px solid #ccc;overflow: hidden; position: relative;}
 .box-wrap .box-img .box-img-center img{ width: 100%; max-width: 100%; height: 100%; max-height: 100%;}
-.box-wrap .box-contan .box-left{ display: flex;flex-wrap: wrap;justify-content: space-between;min-height: 200px;}
+.box-wrap .box-contan{min-height: 200px;}
+.box-wrap .box-contan .box-left{ display: flex;flex-wrap: wrap;justify-content: space-between;}
 .box-wrap .box-contan .box-left p{ margin:0; padding:0 0 5px 0; font-size: 15px;word-break: break-all;display: flex;
   flex-direction: column;}
 .box-wrap .box-contan .box-left h4{ width: 100%; text-align:left;margin: 0;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
 .box-wrap .box-contan .box-right{ background:#9ddd49; color: #fff;display: inline-block; margin:15px 0 0 0;  width: 100%; padding: 5px 15px;}
-.box-wrap .box-contan .box-right h4{ float:left; color: #fff; margin: 0; padding: 0;line-height: 24px;}
+.box-wrap .box-contan .box-right h4{ float:left; color: #fff; margin: 0; padding: 0;line-height: 24px; font-size: 15px;}
 .box-wrap .box-contan .box-right .btnsbox{ float:right; color: #fff;}
 .box-wrap .box-contan .box-right .btnsbox a{ color:#fff;}
 
 .box-wrap .box-img .box-img-center a.play-icon{ width: 100%; height: 100%; line-height: 130px; vertical-align: middle; text-align: center;position: absolute; top: 0; left: 0;}
 .box-wrap .box-img .box-img-center a.play-icon img{ max-width: 50px; max-height: 50px;}
+#list-wrapper .box-contan .box-left{ min-height:147px;}
+#list-wrapper.trainer_dashbord_video_section .box-contan .box-left{ min-height:80px;}
+.box-wrap{ margin-bottom:25px;}
+
+
+#button_update_delete{ margin:25px 0 0 0;}
+#button_update_delete .btn{ width:auto;}
+
 
 
  @media only screen and (max-width: 1024px) {
