--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -7983,7 +7983,7 @@
  button {
      background-color: #8cc63f;
      color: white;
-     padding: 14px 20px !important;
+     padding:10px 20px !important;
      margin: 8px 0;
      border: none;
      cursor: pointer;
@@ -8532,26 +8532,31 @@ input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
 }
 .videosource video{ width: 100%; margin:25px 0 0 0;}
 
-.box-wrap .box-img{ width: 100%; height:130px; margin: 0 0 15px 0; width: 100%; display: inline-block;}
+.box-wrap .box-img{ width: 100%; height:180px; margin: 0 0 15px 0; width: 100%; display: inline-block;}
 .box-wrap .box-img .box-img-center{ height:100%; border-bottom:2px solid #ccc;overflow: hidden; position: relative;}
 .box-wrap .box-img .box-img-center img{ width: 100%; max-width: 100%; height: 100%; max-height: 100%;}
-.box-wrap .box-contan{min-height: 200px;}
+/* .box-wrap .box-contan{min-height: 200px;} */
 .box-wrap .box-contan .box-left{ display: flex;flex-wrap: wrap;justify-content: space-between;}
-.box-wrap .box-contan .box-left p{ margin:0; padding:0 0 5px 0; font-size: 15px;word-break: break-all;display: flex;
+.box-wrap .box-contan .box-left p{ margin:0; padding:0 0 5px 0; width:100%; font-size: 15px;word-break: break-all;display: flex;
   flex-direction: column;}
-.box-wrap .box-contan .box-left h4{ width: 100%; text-align:left;margin: 0;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
+.box-wrap .box-contan .box-left h4{ width: 100%; text-align:left;margin:0 0 8px 0;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
 .box-wrap .box-contan .box-right{ background:#9ddd49; color: #fff;display: inline-block; margin:15px 0 0 0;  width: 100%; padding: 5px 15px;}
 .box-wrap .box-contan .box-right h4{ float:left; color: #fff; margin: 0; padding:0 5px 0 0;line-height: 24px; font-size: 15px;}
 .box-wrap .box-contan .box-right .btnsbox{ float:right; color: #fff;}
 .box-wrap .box-contan .box-right .btnsbox a{ color:#fff;}
 
-.box-wrap .box-img .box-img-center a.play-icon{ width: 100%; height: 100%; line-height: 130px; vertical-align: middle; text-align: center;position: absolute; top: 0; left: 0;}
+.box-wrap .box-img .box-img-center a.play-icon{ width: 100%; height: 100%; line-height: 170px; vertical-align: middle; text-align: center;position: absolute; top: 0; left: 0;}
 .box-wrap .box-img .box-img-center a.play-icon img{ max-width: 50px; max-height: 50px;}
-#list-wrapper .box-contan .box-left{ min-height:147px;}
+/* #list-wrapper .box-contan .box-left{ min-height:147px;} */
 #list-wrapper.trainer_dashbord_video_section .box-contan .box-left{ min-height:80px;}
 .box-wrap{ margin-bottom:25px;}
 
+.traierclass h3{ width: 100%; margin: 0; padding: 0 0 15px 0; color: #666; font-weight: 400; font-size: 16px;}
 
+
+.whatclientsay .choosebtn{ width: 100%; background: #8cc63f;color: #ffff; padding:8px 0 6px 0; font-size: 15px;}
+.whatclientsay video{ width: 100%; max-width: 100%;}
+#w0-error-0{position: fixed; bottom: 0; right: 0; font-size: 15px;}
 #button_update_delete{ margin:25px 0 0 0;}
 #button_update_delete .btn{ width:auto;}
 
@@ -8561,6 +8566,53 @@ input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
 .form-group .bootstrap-timepicker{ padding:0 0 0 15px;}
 .form-inline .form-group label{ vertical-align: top;line-height: 38px;}
 .comment-info .commet-row-label{ font-style: normal;}
+.list-wrapper .panel-body .info-box p{ margin: 0; padding: 0 0 5px 0; font-size: 15px;font-weight: 300;}
+.list-wrapper .panel-body .info-box p .badge{position: relative;top: inherit; left: inherit; font-size:12px; }
+.accepted{ background:#8cc63f;}
+.panding{ background:#8f8f8f;}
+.rejected{ background:#ff1b1b;}
+.cancelled{ background:#478396;}
+
+.videolist .box-contan img.img-circle {
+    position: absolute;
+    top: 130px;
+    right: 14px;
+    width: 50px !important;
+    height: 50px !important;
+    
+}
+.videolist .box-contan .box-left{ min-height:105px !important;}
+.box-left img.img-circle {
+    position: absolute;
+    top: 130px;
+    right: 14px;
+    width: 50px !important;
+    height: 50px !important;
+    
+}
+.whatclientsay{position: relative;}
+a.filterbtn {
+    background: #8cc63f;
+    color: #fff;
+    padding: 0 20px;
+    font-size: 16px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 5px;
+    height: 30px;
+    line-height: 30px;
+    /* width: 35px; */
+    text-align: center;
+}
+.filterpopup{z-index: 9999 !important;}
+.filterpopup .modal-content{ border-radius:0;}
+.filterpopup .modal-content .searchbox{ padding: 25px 0 0px 0; }
+.filterpopup .modal-header{ background: #8cc63f;}
+.filterpopup .modal-header h4{ font-size:22px; color: #fff;}
+.filterpopup .modal-content .searchbox .searcbtn{ text-align: center;}
+.filterpopup .modal-content .searchbox button{ width: auto;}
+
 
  @media only screen and (max-width: 1024px) {
      .container {
