--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -8532,9 +8532,29 @@ input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
 }
 .videosource video{ width: 100%; margin:25px 0 0 0;}
 
-.box-wrap .box-img{ width: 100%; height:180px; margin: 0 0 15px 0; width: 100%; display: inline-block;}
-.box-wrap .box-img .box-img-center{ height:100%; border-bottom:2px solid #ccc;overflow: hidden; position: relative;}
-.box-wrap .box-img .box-img-center img{ width: 100%; max-width: 100%; height: 100%; max-height: 100%;}
+.box-wrap .box-img{width: 100% !important;
+    height: 215px;
+    margin: 0 0 15px 0;
+    width: 100%;
+    display: table;
+    vertical-align: middle;
+
+}
+.box-wrap .box-img .box-img-center {
+
+    height: 100%;
+    border-bottom: 2px solid #f3f3f3;
+    overflow: hidden;
+    position: relative;
+    display: table-cell;
+    height: 215px;
+    width: 100%;
+    background: #f3f3f3;
+    vertical-align: middle;
+    text-align: center;
+
+}
+.box-wrap .box-img .box-img-center img{ width:auto; max-width: 100%; height:auto; max-height: 100%;}
 /* .box-wrap .box-contan{min-height: 200px;} */
 .box-wrap .box-contan .box-left{ display: flex;flex-wrap: wrap;justify-content: space-between;}
 .box-wrap .box-contan .box-left p{ margin:0; padding:0 0 5px 0; width:100%; font-size: 15px;word-break: break-all;display: flex;
@@ -8543,8 +8563,14 @@ input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
 .box-wrap .box-contan .box-right{ background:#9ddd49; color: #fff;display: inline-block; margin:15px 0 0 0;  width: 100%; padding: 5px 15px;}
 .box-wrap .box-contan .box-right h4{ float:left; color: #fff; margin: 0; padding:0 5px 0 0;line-height: 24px; font-size: 15px;}
 .box-wrap .box-contan .box-right .btnsbox{ float:right; color: #fff;}
-.box-wrap .box-contan .box-right .btnsbox a{ color:#fff;}
-
+.box-wrap .box-contan .box-right .btnsbox a{    color: #fff;
+    vertical-align: top;
+    height: auto;
+    line-height: normal;
+    display: inline-block;
+    font-size: 18px;
+}
+.box-wrap .box-contan .box-right .btnsbox a.edit_vdo{ margin:1px 5px 0 0;vertical-align: top;}
 .box-wrap .box-img .box-img-center a.play-icon{ width: 100%; height: 100%; line-height: 170px; vertical-align: middle; text-align: center;position: absolute; top: 0; left: 0;}
 .box-wrap .box-img .box-img-center a.play-icon img{ max-width: 50px; max-height: 50px;}
 /* #list-wrapper .box-contan .box-left{ min-height:147px;} */
@@ -8572,23 +8598,38 @@ input.krajee-datepicker, .input-group input.form-control{margin: 0 !important;
 .panding{ background:#8f8f8f;}
 .rejected{ background:#ff1b1b;}
 .cancelled{ background:#478396;}
-
+.videolist .box-contan{ text-align: center;}
 .videolist .box-contan img.img-circle {
-    position: absolute;
-    top: 130px;
-    right: 14px;
-    width: 50px !important;
-    height: 50px !important;
-    
+    position: relative;
+    top: 0px;
+    right: 0;
+    width: 80px !important;
+    height: 80px !important;
+    margin: -60px auto 25px auto;
+    max-width: 80px;
+    max-height: 80px;
 }
-.videolist .box-contan .box-left{ min-height:105px !important;}
+.videolist .box-contan .box-left{ min-height:105px !important;text-align: left;}
 .box-left img.img-circle {
-    position: absolute;
-    top: 130px;
-    right: 14px;
-    width: 50px !important;
-    height: 50px !important;
-    
+    position: relative;
+    top: 0px;
+    right: 0;
+    width: auto !important;
+    height: auto !important;
+    margin: -60px auto 25px auto;
+    max-width: 80px;
+    max-height: 80px;
+}
+img.img-circle.videoimg {
+    position: relative;
+    top: 0px;
+    right: 0;
+    width: auto !important;
+    height: auto !important;
+    margin: 0px auto 15px auto;
+    max-width:100%;
+    max-height:100%;
+    border-radius:0; 
 }
 .whatclientsay{position: relative;}
 a.filterbtn {
@@ -8615,9 +8656,7 @@ a.filterbtn {
 
 
  @media only screen and (max-width: 1024px) {
-     .container {
-        width: 100%;
-    }
+.container {width: 100%;}
 }
  @media only screen and (max-width: 991px) {
      .edit_profile .img_users, .edit_profile .form-group.field-user-bio {
