--- a/frontend/web/css/video_style.css
+++ b/frontend/web/css/video_style.css
@@ -362,7 +362,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 
 .ots-text-chat .ots-messages-holder {
-    height:200px;
+    height: 200px;
     overflow: hidden;
     overflow-y: scroll
 }
@@ -524,9 +524,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .ots-text-chat .ots-send-message-box {
     position: relative;
     width: 100%;
-    height:50px;
+    height: 50px;
     border-top: 1px solid #c6c6c6;
-    padding-right:70px
+    padding-right: 70px
 }
 
 .ots-text-chat .ots-send-message-box input[type="text"],
@@ -535,10 +535,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
     border: 0;
     outline: 0;
     background: 0;
-    padding:5px;
+    padding: 5px;
     font-size: 16px;
     resize: none;
-    height: 50px; box-sizing: border-box;
+    height: 50px;
+    box-sizing: border-box;
     margin: 0;
 }
 
@@ -547,13 +548,12 @@ only screen and (min-device-pixel-ratio: 1.5) {
     top: 0;
     right: 0;
     width: 70px;
-    height:50px;
+    height: 50px;
     background-color: #8cc63f;
     border-left: 1px solid #8cc63f;
     outline: 0;
     border: 0;
     margin: 0;
-   
 }
 
 .ots-text-chat .ots-send-message-box button:hover {
@@ -1139,14 +1139,14 @@ only screen and (min-device-pixel-ratio: 1.5) {
     /* position: relative; */
     width: 100%;
     height: calc(75vw * .6);
-    margin:0px auto;
-    border:1px solid lightblue;
+    margin: 0px auto;
+    border: 1px solid lightblue;
 }
 
 .App-control-container {
     position: absolute;
     height: 100%;
-    width:50px;
+    width: 50px;
     right: 0px;
     display: flex;
     flex-direction: column;
@@ -1162,7 +1162,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .App-control-container .ots-video-control {
     width: 30px;
     height: 30px;
-    margin:5px 0 !important;
+    margin: 5px 0 !important;
     border: 2px solid white;
     border-radius: 50%;
     background-position: center;
@@ -1248,7 +1248,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     top: 20px;
     right: 20px;
     width: 160px; */
-    height:300px;
+    height: 300px;
     border: 1px solid #fcba00;
     z-index: 2;
 }
