--- a/frontend/web/css/classstyle.css
+++ b/frontend/web/css/classstyle.css
@@ -386,3 +386,16 @@ body {
 .userJoinbox-ul li strong {
     margin-left: 10px;
 }
+
+.classStartStopBtn {
+    padding: 0 20px!important;
+    font-size: 16px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 5px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: auto;
+}
